# mcp_demo

./: .gitignore  README.md  dockercompose.yml
docker/: findxai_mcp.dockerfile
docker/findxai/: .env
docker/migration/: dockerfile  findxai.session.sql
src/projects/findxai/: content_pb2.py  content_pb2.pyi  content_pb2_grpc.py  main.py  pyproject.toml  search_pb2.py  search_pb2.pyi  search_pb2_grpc.py
src/projects/host_chat/: hippocampus.py  main.py  open_router.py  pyproject.toml  tool_play_audio.py
src/projects/host_chat/mcp_client/: __init__.py  client_findxai.py  client_frequent_trade.py
src/projects/migration/: main.py  pyproject.toml
