[project]
name = "client"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "dnthanh1298@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli] (>=1.6.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.75.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
