[project]
name = "client"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "dnthanh1298@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mcp[cli] (>=1.6.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.75.0,<2.0.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "langchain-mcp-adapters (>=0.0.9,<0.0.10)",
    "langgraph (>=0.3.31,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
